# gendiff

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: gendiff.yml  pyci.yml
gendiff/: __init__.py  create_diff.py  create_differences.py  display_in_format.py  formatter_flat.py  formatter_stylish.py  gendiff.py  gendiff_module.py  gendiff_parser.py  gendiff_stylish.py  gendiff_tools.py  generate_diff.py  module_gendiff.py  output_dif_stylich.py  output_diff_flat.py  output_diff_stylish.py  parse_args.py  parse_flat.py  parse_plain.py  parse_stylish.py  parser.py
gendiff/files_for_gendiff/: file1.json
gendiff/formatters/: __init__.py  format_json.py  format_plain.py  format_stylish.py  output_flat.py  output_json.py  output_plain.py  output_stylish.py
gendiff/scripts/: debug_script.py  gendiff.py  gendiff_script.py  gendiff_script_stylish.py  script_gendiff.py
tests/: test_create_lst_of_diff_stylish.py  test_create_string_of_diff_stylish.py  test_gendiff_parser.py  test_gendiff_stylish.py  test_generate_gendiff.py  test_make_lines_stylish.py  test_output_flat.py  test_output_plain.py  test_output_stylish.py  test_parse_flat.py  test_parse_plain.py  test_parse_stylish.py  test_parser.py
tests/fixtures/: expected_create_differences.py  expected_from_test_file1_file2.txt  expected_in_lst_of_diff.py  expected_in_lst_of_diff_stylish.py  expected_output_json.txt  expected_parse_flat.py  expected_parse_stylish.py  expected_parser.py  expected_parser_plain.py  file1_for_test.json  file1_for_test.yaml  file2_for_test.json
